# desafio-anagrama

./: .gitignore  Makefile  README.md  poetry.toml  pyproject.toml  requirements.txt
desafio_anagrama/: main.py
htmlcov/: d_ee1280d17250c8c8___init___py.html  d_ee1280d17250c8c8_main_py.html  index.html  status.json
tests/: conftest.py  test_desafio_anagrama.py  test_version_app.py
