[tool.poetry]
authors = ["Gladson S Brito <gladsonbrito@gmail.com>"]
description = "Desafio Anagrama"
name = "desafio-anagrama"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipdb = "^0.13.9"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
types-toml = "^0.10.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
